remove permgen opts